# auto-run-task

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  run.py
docs/: AGENT_GUIDE.md  ROADMAP.md  USER_GUIDE.md
task_runner/: cli.py  config.py  executor.py
task_runner/agent/: agents.py  config.py  display_agent.py  planner.py  repl.py  runner.py  session.py  skills.py  tools.py
task_runner/agent/prompts/: demand_analyst.md  orchestrator.md  project_analyzer.md  task_generator.md  validator.md
task_runner/commands/: plan_cmd.py  run_cmd.py
task_runner/display/: __init__.py  core.py  tracker.py
tests/: test_config.py
tests/agent/: test_config.py  test_planner.py  test_providers.py  test_repl.py  test_tools.py
